@@ -133,6 +133,7 @@ extern PyTypeObject OscLoopType;
 extern PyTypeObject PulsarType;
 extern PyTypeObject NoiseType;
 extern PyTypeObject PinkNoiseType;
+extern PyTypeObject BrownNoiseType;
 extern PyTypeObject InputType;
 extern PyTypeObject SfPlayerType;
 extern PyTypeObject SfPlayType;
